# robolectric-bazel

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  renovate.json  update-versions.py  update_versions.py
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: buildifier.yaml  ci.bazelrc  ci.yaml  publish.yaml  release.yaml  release_prep.sh
bazel/: BUILD  extensions.bzl  gen-deps.py  robolectric.bzl  versions.bzl
bazel/java/: http_jar.bzl
examples/simple/: .bazelrc  AndroidManifest.xml  BUILD.bazel  MODULE.bazel  SparseArraySetTest.java  WORKSPACE
tests/: BUILD.bazel  update_versions_test.py
