load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "update_versions_lib",
    srcs = ["update_versions.py"],
    visibility = ["//tests:__pkg__"],
)

py_binary(
    name = "update-versions",
    srcs = ["update_versions.py"],
    main = "update_versions.py",
)
