load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_python//python:py_test.bzl", "py_test")

build_test(
    name = "test",
    targets = [
        "//bazel:android-all",
        "//bazel:android-all-jars",
        "//bazel:properties",
        "//bazel:gen-deps",
    ],
)

py_test(
    name = "update_versions_test",
    srcs = ["update_versions_test.py"],
    deps = ["//:update_versions_lib"],
)
