module(
    name = "rules_robolectric_examples_bzlmod",
    version = "TODO",
)

# I don't think this bazel_dep version actually matters because it's being overriden by the local_path_override.
bazel_dep(name = "robolectric", version = "1")
local_path_override(module_name = "robolectric", path = "../..")

bazel_dep(name = "rules_android", version = "0.1.1")
bazel_dep(name = "rules_jvm_external", version = "5.2")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.truth:truth:1.1.3",
        "org.robolectric:robolectric:4.10",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
