module(
    name = "rules_robolectric_examples_bzlmod",
    version = "TODO",
)

# I don't think this bazel_dep version actually matters because it's being overriden by the local_path_override.
bazel_dep(name = "rules_robolectric", version = "1", repo_name = "robolectric")
local_path_override(
    module_name = "rules_robolectric",
    path = "../..",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")

bazel_dep(name = "hermetic_android_toolchains", version = "0.3.0", dev_dependency = True)
bazel_dep(name = "rules_android", version = "0.7.3", dev_dependency = True)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "com.google.truth:truth:1.1.3",
        "org.robolectric:robolectric:4.16.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
)
use_repo(maven, "maven")

android = use_extension("@hermetic_android_toolchains//:extensions.bzl", "android", dev_dependency = True)
android.sdk(
    build_tools_version = "37.0.0",
    version = "37.0",
)
use_repo(android, "androidsdk")

# Make @rules_android's @androidsdk labels resolve to the hermetic SDK.
rules_android_sdk = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension", dev_dependency = True)

override_repo(rules_android_sdk, "androidsdk")

register_toolchains(
    "@androidsdk//:all",
    dev_dependency = True,
)
